--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ SEOTitle: 娜娜的博客 | NANA Blog
 header-img: img/post-bg-desk.jpg
 email: qiubaiying@gmail.com
 description: "记录学习过程和笔记，一起进步叭！"
-keyword: "NANA, NANA Blog, 娜娜的博客, xiaonalin, 林晓娜, 前端, JS, CSS"
+keyword: "NANA, NANA Blog, 娜娜的博客, xiaonalin, 前端, JS, CSS"
 url: "http://xiaonalin.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/Nov-Nana/xiaonalin.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
