--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 娜娜的博客 | NANA Blog
 header-img: img/post-bg-desk.jpg
 email: qiubaiying@gmail.com
 description: "记录学习过程和笔记，一起进步叭！"
-keyword: "NANA, NANA Blog, 娜娜的博客, xiaonalin, 前端, JS, CSS"
+keyword: "NANA, NANA Blog, 娜娜的博客, 前端, JS, CSS, HTML, Vue"
 url: "http://xiaonalin.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/Nov-Nana/xiaonalin.github.io.git" # you code repository
