--- a/_config.yml
+++ b/_config.yml
@@ -100,16 +100,7 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "WY",
+        title: "WB",
         href: "http://zhengwuyang.com"
     },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
-    },{
-        title: "Apple",
-        href: "https://apple.com"
-    },{
-        title: "Apple Developer",
-        href: "https://developer.apple.com/"
-    }
 ]
