--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/post-bg-desk.jpg
 email: qiubaiying@gmail.com
 description: "记录学习过程和笔记，一起进步叭！"
 keyword: "NANA, NANA Blog, 娜娜的博客, 前端, JS, CSS, HTML, Vue"
-url: "http://nov-nana.github.io"          # your host, for absolute URL
+url: "http://Nov-Nana.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/Nov-Nana/Nov-Nana.github.io.git" # you code repository
 
