--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: NANA Blog
 SEOTitle: 娜娜的博客 | NANA Blog
 header-img: img/post-bg-desk.jpg
-email: qiubaiying@gmail.com
+email: 791186022@qq.com
 description: "记录学习过程和笔记，一起进步叭！"
 keyword: "NANA, NANA Blog, 娜娜的博客, 前端, JS, CSS, HTML, Vue"
 url: "http://Nov-Nana.github.io"          # your host, for absolute URL
